RESOLVED FIXED214071
Network process crashes in WebKit::WebIDBServer::removeConnection
https://bugs.webkit.org/show_bug.cgi?id=214071
Summary Network process crashes in WebKit::WebIDBServer::removeConnection
Sihui Liu
Reported 2020-07-07 22:40:56 PDT
...
Attachments
Patch (5.18 KB, patch)
2020-07-07 22:52 PDT, Sihui Liu
no flags
Patch (5.19 KB, patch)
2020-07-08 09:37 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2020-07-07 22:41:27 PDT
Sihui Liu
Comment 2 2020-07-07 22:52:00 PDT
Chris Dumez
Comment 3 2020-07-08 08:50:55 PDT
Comment on attachment 403760 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403760&action=review > Source/WebKit/NetworkProcess/NetworkProcess.cpp:2517 > + if (!m_webIDBServers.contains(sessionID) || m_networkSessions.contains(sessionID)) This function looks up sessionID in m_webIDBServers up to 3 times. I suggest using an iterator to avoid that.
Sihui Liu
Comment 4 2020-07-08 09:37:47 PDT
EWS
Comment 5 2020-07-08 11:15:12 PDT
Committed r264119: <https://trac.webkit.org/changeset/264119> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403790 [details].
Note You need to log in before you can comment on or make changes to this bug.