Network process crashes in WebKit::WebIDBServer::removeConnection https://bugs.webkit.org/show_bug.cgi?id=214071 <rdar://problem/64853929>

Patch by Sihui Liu <sihui_liu@appe.com> on 2020-07-08
Reviewed by Chris Dumez.

In network process, WebIDBServer may be removed and destroyed before web process using the same session
disconnects. Then a new WebIDBServer can be added before disconnection of web process and the new WebIDBServer
does not have information about the web process connection.

To solve this issue, now we only remove WebIDBServer when session is destroyed and there is no web process
connection of that session.

* NetworkProcess/IndexedDB/WebIDBServer.h:
* NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::createNetworkConnectionToWebProcess):
(WebKit::NetworkProcess::destroySession):
(WebKit::NetworkProcess::removeWebIDBServerIfPossible):
(WebKit::NetworkProcess::connectionToWebProcessClosed):
* NetworkProcess/NetworkProcess.h:

Canonical link: https://commits.webkit.org/226897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264119 268f45cc-cd09-0410-ab3c-d52691b4dbfc